--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Első weboldalam</title>
 </head>
-<body>
+<body style="background-color: #4b4b4d">
     
 <center>    
-<h1> 
+<h1 style="color: white; font-style: Arial;"> 
     Első weboldalam
 </h1>
+ <h2> KAKI  </h2>
+ <img src="https://cdn.pixabay.com/photo/2017/01/31/14/56/poop-2024794_960_720.png">
 </center>
 
 </body>
